--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Search Wikipedia</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,200;8..144,800&display=swap"
+    rel="stylesheet">
 </head>
 <body>
   <main>
     <div class="logo">
-
+      <img src="./assets/logo.png" alt="" width="180px">
     </div>
     <div class="search">
       <form class="search-form">
@@ -18,7 +23,6 @@
     </div>
     <hr>
     <div class="results">
-
     </div>
   </main>
   <script src="./main.js"></script>
