added loading indicator and now the results content gets deleted on new search

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
       </form>
     </div>
     <hr>
+    <div class="spinner hidden">
+      <div class="bounce1"></div>
+      <div class="bounce2"></div>
+      <div class="bounce3"></div>
+    </div>
     <div class="results">
     </div>
   </main>
